--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,8 +21,8 @@
  
         <service android:name=".service.StepService"
           		 android:enabled="true" 
-          		 android:exported="true">
-                 <!-- android:process=":StepService"> -->
+          		 android:exported="true"
+                 android:process=":StepService">
         </service>
 
     </application>
