--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,11 @@
       package="com.jwetherell.pedometer"
       android:versionCode="1"
       android:versionName="1.0">
-      
+
+    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
+
+    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+
     <application android:icon="@drawable/icon" 
     			 android:label="@string/app_name"
     			 android:theme="@android:style/Theme.NoTitleBar">
@@ -26,9 +30,5 @@
         </service>
 
     </application>
-    
-    <uses-sdk android:minSdkVersion="3" />
-
-	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 
 </manifest> 
