--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,13 +4,14 @@
       android:versionCode="1"
       android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
+    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="23"/>
 
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 
     <application android:icon="@drawable/icon" 
     			 android:label="@string/app_name"
-    			 android:theme="@android:style/Theme.NoTitleBar">
+    			 android:theme="@android:style/Theme.NoTitleBar"
+    			 android:allowBackup="true">
     
         <activity android:name=".activity.Demo"
                   android:label="@string/app_name"
